--- a/readme
+++ b/readme
@@ -1,10 +1,15 @@
+Install instructions tested on python3.12 and python3.14.
 
-install google chrome:
-    curl -LO https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-    apt install -y ./google-chrome-stable_current_amd64.deb
+Install google chrome:
+$ curl -LO https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+$ apt install -y ./google-chrome-stable_current_amd64.deb
 
-for ocr, make sure you create a file called 'gcv_api_key' in this directory and
-put in your google cloud vision api key.
+For handwriting recongition, create a file called 'gcv_api_key' with your
+Google Cloud Vision API key in this directory.
+
+
+$ python3 -m .venv venv
+$ source .venv/bin/activate
 
 to set up sync folder, run:
 $ python3 -m rm_viewer syncd --install
